tailwindcss 변수화 하여 사용

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,7 +9,9 @@
     "tw=\"([^\"]*)", // <div tw="..." />
     "tw={\"([^\"}]*)", // <div tw={"..."} />
     "tw\\.\\w+`([^`]*)", // tw.xxx`...`
-    "tw\\(.*?\\)`([^`]*)" // tw(Component)`...`
+    "tw\\(.*?\\)`([^`]*)", // tw(Component)`...`
+    "st`([^`]*)", // tw`...`
+    "st<.*?>`([^`]*)`" // tw<...>`...`
   ],
   "tailwindCSS.includeLanguages": {
     "typescript": "javascript",
