--- a/package.json
+++ b/package.json
@@ -1,41 +1,36 @@
 {
-  "name": "boiler",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@babel/core": "^7.22.1",
-    "@types/node": "20.2.5",
-    "@types/react": "18.2.7",
-    "@types/react-dom": "18.2.4",
-    "@types/styled-components": "^5.1.26",
-    "autoprefixer": "^10.4.14",
-    "eslint": "8.41.0",
-    "eslint-config-next": "13.4.4",
-    "next": "13.4.4",
-    "next-themes": "^0.2.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "styled-components": "^5.3.11",
-    "swiper": "^9.3.2",
-    "typescript": "5.0.4"
-  },
-  "devDependencies": {
-    "@babel/plugin-syntax-typescript": "^7.21.4",
-    "babel-loader": "^9.1.2",
-    "babel-plugin-macros": "^3.1.0",
-    "postcss": "^8.4.24",
-    "tailwindcss": "^3.3.2",
-    "twin.macro": "^3.3.1"
-  },
-  "babelMacros": {
-    "twin": {
-      "preset": "styled-components"
-    }
-  }
+	"name": "tailwind-styled-components",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "prettier ./src --write && next lint --fix"
+	},
+	"dependencies": {
+		"@types/node": "20.2.5",
+		"@types/react": "18.2.8",
+		"@types/react-dom": "18.2.4",
+		"autoprefixer": "10.4.14",
+		"cookies-next": "^2.1.1",
+		"next": "13.4.4",
+		"next-themes": "^0.2.1",
+		"postcss": "8.4.24",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
+		"styled-components": "^6.0.0-rc.3",
+		"swiper": "^9.4.0",
+		"typescript": "5.1.3"
+	},
+	"devDependencies": {
+		"tailwind-styled-components": "^2.2.0",
+		"tailwindcss": "3.3.2",
+		"@trivago/prettier-plugin-sort-imports": "^4.1.1",
+		"eslint": "8.42.0",
+		"eslint-config-next": "13.4.4",
+		"eslint-config-prettier": "^8.8.0",
+		"prettier": "^2.8.8",
+		"prettier-plugin-tailwindcss": "^0.3.0"
+	}
 }
