--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
 		"lint": "prettier ./src --write && next lint --fix"
 	},
 	"dependencies": {
+		"@tanstack/react-query": "^4.29.14",
+		"@tanstack/react-query-devtools": "^4.27.0",
 		"@types/node": "20.2.5",
 		"@types/react": "18.2.8",
 		"@types/react-dom": "18.2.4",
 		"autoprefixer": "10.4.14",
-		"cookies-next": "^2.1.1",
 		"next": "13.4.4",
 		"next-themes": "^0.2.1",
 		"postcss": "8.4.24",
@@ -21,16 +22,18 @@
 		"react-dom": "18.2.0",
 		"styled-components": "^6.0.0-rc.3",
 		"swiper": "^9.4.0",
-		"typescript": "5.1.3"
+		"swr": "^2.2.0",
+		"typescript": "5.1.3",
+		"zustand": "^4.3.8"
 	},
 	"devDependencies": {
-		"tailwind-styled-components": "^2.2.0",
-		"tailwindcss": "3.3.2",
 		"@trivago/prettier-plugin-sort-imports": "^4.1.1",
 		"eslint": "8.42.0",
 		"eslint-config-next": "13.4.4",
 		"eslint-config-prettier": "^8.8.0",
 		"prettier": "^2.8.8",
-		"prettier-plugin-tailwindcss": "^0.3.0"
+		"prettier-plugin-tailwindcss": "^0.3.0",
+		"tailwind-styled-components": "^2.2.0",
+		"tailwindcss": "3.3.2"
 	}
 }
